--- a/contact.html
+++ b/contact.html
@@ -61,86 +61,81 @@
 
     <!-- Menu Bar Creation -->
     <div id="menu" class="menu">
-         <div class="actionsBar">
-             <div>
-                 <button id="menuBtn" type="button"><i class="fas fa-bars"></i></button>
-                 <h3 class="menuText">Dashboard</h3>
-             </div>
-         </div>
-         <ul class="optionsBar">
-             <li class="menuItem">
-                                <a href="./index.html" class="menuOption">
-                     <i class="fas fa-home"></i><h5 class="menuText">Home</h5>
-                 </a>
-             </li>
+      <div class="actionsBar">
+        <div>
+          <button id="menuBtn" type="button">
+            <i class="fas fa-bars"></i>
+          </button>
+          <h3 class="menuText">Dashboard</h3>
+        </div>
+      </div>
+      <ul class="optionsBar">
+        <li class="menuItem">
+          <a href="./index.html" class="menuOption">
+            <img src="./images/Logo.png" class="img-fluid" alt="Logo">
+            <h5 class="menuText">Home</h5>
+          </a>
+        </li>
 
-             <li class="menuItem">
+        <li class="menuItem">
+          <a href="#about" id="productManagerBtn" class="menuOption">
+            <i class="fas fa-info"></i>
+            <h5 class="menuText">About</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="#" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-border-all"></i>
+            <h5 class="menuText">Projects</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a
+            href="./certificates/cr-main.html"
+            id="constantManagerBtn"
+            class="menuOption"
+          >
+            <i class="fas fa-certificate"></i>
+            <h5 class="menuText">Certificate</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
+          <i class="fas fa-images"></i>
+            <h5 class="menuText">Gallery</h5>
+          </a>
+        </li>
 
-                 <a  href="#about" id="productManagerBtn"  class="menuOption">
-                     <i class="fas fa-shopping-bag"></i><h5 class="menuText">About</h5>
-                 </a>
-             </li>
-             <li class="menuItem">
-                 <a  href="#" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Projects</h5>
-                 </a>
-             </li>
-             <li class="menuItem">
-                 <a  href="./certificates/cr-main.html" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Certificate</h5>
-                 </a>
-             </li>
-             <li class="menuItem">
-                 <a  href="./gallery.html" id="constantManagerBtn" class="menuOption">
+        <li class="menuItem">
+          <a href="./music.html" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-play"></i>
+            <h5 class="menuText">Music</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="#" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-blog"></i>
+            <h5 class="menuText">Blogs</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="./contact.html" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-phone"></i>
+            <h5 class="menuText">Contact</h5>
+          </a>
+        </li>
+      </ul>
 
-                 <i class="fas fa-border-all"></i><h5 class="menuText">Gallery</h5>
-                  </a>
-             </li>
 
-             <li class="menuItem">
-                 <a  href="./music.html" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Music</h5>
-                 </a>
-             </li>
-             <li class="menuItem">
-                 <a  href="#" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Blogs</h5>
-                 </a>
-             </li>
-             <li class="menuItem">
-                 <a  href="./contact.html" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Contact</h5>
-                 </a>
-             </li>
-
-         </ul>
-
-         <div class="menuUser">
-             <a href="#">
-                 <div>
-                   <img
-                     src="./images/Main__img-1.png"
-
-                     alt="Main_img"
-                   />
-                 </div>
-                 <h5 class="Username menuText">Alex</h5>
-                 <p class="menuText"><i class="fas fa-chevron-right"></i></p>
-             </a>
-             <div class="userInfo">
-                 <div>
-                     <h1><i class="fas fa-exclamation-circle"></i></h1>
-                     <p>User Info</p>
-                 </div>
-             </div>
-         </div>
-         <div class="themeBar">
-             <div>
-                 <button class="btn-toggle" type="button" id="dark-mode-toggle"><i class="fas fa-moon" id="fa-moon"></i>
-                   <i class="fas fa-sun sun1" id="img-fluid" ></i></button>
-             </div>
-         </div>
-     </div>
+      <div class="themeBar">
+        <div>
+          <button class="btn-toggle button" type="button" id="dark-mode-toggle">
+            <i class="fas fa-moon" id="fa-moon"></i>
+            <i class="fas fa-sun sun1" id="img-fluid"></i>
+          </button>
+        </div>
+      </div>
+    </div>
 
 
      <!--  <div class="Separator"><br /><br /><br /><br /></div>-->
