--- a/certificates/cr-main.html
+++ b/certificates/cr-main.html
@@ -37,6 +37,8 @@
     <!-- Custom Css -->
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/loading.css" />
+      <link rel="stylesheet" href="../css/sidebar.css" />
+      <link rel="stylesheet" href="../css/dark.css" />
   </head>
   <body>
     <!-- Loader Addition -->
@@ -63,39 +65,87 @@
         </div>
       </div>
     </div>
-
+<div class="row">
+  <div class="col-lg-3"
     <!-- Menu Bar Creation -->
-    <nav>
-      <a href="../index.html" class="Logo__Img"
-        ><img src="../images/Logo.png" class="img-fluid" alt="Logo"
-      /></a>
-      <ul class="Menu__List__holder">
-        <li><a href="../index.html" class="nav__link">Home</a></li>
-        <li><a href="../about.html" class="nav__link">About</a></li>
-        <li><a href="#" class="nav__link">Projects</a></li>
-        <li><a href="./cr-main.html" class="nav__link">Certifications</a></li>
-        <li><a href="../gallery.html" class="nav__link">Gallery</a></li>
-        <li><a href="#" class="nav__link">Music</a></li>
-        <li><a href="#" class="nav__link">Blogs</a></li>
-        <li><a href="../contact.html" class="nav__link">Contact</a></li>
-        <li>
-          <a href="#" class="nav__link"
-            ><img
-              src="../images/icons/light.svg"
-              class="img-fluid mode__icon"
-              id="dark-mode-toggle"
-              alt="Modes"
-          /></a>
+    <div id="menu" class="menu">
+      <div class="actionsBar">
+        <div>
+          <button id="menuBtn" type="button">
+            <i class="fas fa-bars"></i>
+          </button>
+          <h3 class="menuText">Dashboard</h3>
+        </div>
+      </div>
+      <ul class="optionsBar">
+        <li class="menuItem">
+          <a href="./index.html" class="menuOption">
+            <img src="../images/Logo.png" class="img-fluid" alt="Logo">
+            <h5 class="menuText">Home</h5>
+          </a>
+        </li>
+
+        <li class="menuItem">
+          <a href="#about" id="productManagerBtn" class="menuOption">
+            <i class="fas fa-info"></i>
+            <h5 class="menuText">About</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="#" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-border-all"></i>
+            <h5 class="menuText">Projects</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a
+            href="./certificates/cr-main.html"
+            id="constantManagerBtn"
+            class="menuOption"
+          >
+            <i class="fas fa-certificate"></i>
+            <h5 class="menuText">Certificate</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
+          <i class="fas fa-images"></i>
+            <h5 class="menuText">Gallery</h5>
+          </a>
+        </li>
+
+        <li class="menuItem">
+          <a href="./music.html" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-play"></i>
+            <h5 class="menuText">Music</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="#" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-blog"></i>
+            <h5 class="menuText">Blogs</h5>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="./contact.html" id="constantManagerBtn" class="menuOption">
+            <i class="fas fa-phone"></i>
+            <h5 class="menuText">Contact</h5>
+          </a>
         </li>
       </ul>
-      <div class="burger">
-        <div class="line-1"></div>
-        <div class="line-2"></div>
-        <div class="line-3"></div>
-      </div>
-    </nav>
 
-    <br /><br />
+
+      <div class="themeBar">
+        <div>
+          <button class="btn-toggle button" type="button" id="dark-mode-toggle">
+            <i class="fas fa-moon" id="fa-moon"></i>
+            <i class="fas fa-sun sun1" id="img-fluid"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+ </div>
+ <div class="col-lg-9">
 
     <div class="portfolio">
       <h2 class="title">My Certificates</h2>
@@ -242,6 +292,8 @@
         </div>
       </a>
     </div>
+  </div>
+</div>
 
     <!-- Bootstrap Js -->
     <script
@@ -249,7 +301,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-
+<script src="../js/sidebar.js"></script>
+<script src="../js/mode.js"></script>
     <!-- Custom Js -->
     <script>
       const Mode = document.querySelector(".mode__icon");
