--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
     <!-- Custom Css -->
     <link rel="stylesheet" href="./css/gallery.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/sidebar.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
@@ -37,160 +38,181 @@
     }
   </style>
   <body>
-    <!-- Menu Bar Creation -->
-    <nav>
-      <a href="./index.html" class="Logo__Img"
-        ><img src="./images/Logo.png" class="img-fluid" alt="Logo"
-      /></a>
-      <ul class="Menu__List__holder">
-        <li><a href="./index.html" class="nav__link">Home</a></li>
-        <li><a href="./about.html" class="nav__link">About</a></li>
-        <li><a href="./project.html" class="nav__link">Projects</a></li>
-        <li>
-          <a href="./certificates/cr-main.html" class="nav__link"
-            >Certificate</a
-          >
-        </li>
-        <li><a href="./gallery.html" class="nav__link">Gallery</a></li>
-        <li><a href="./music.html" class="nav__link">Music</a></li>
-        <li><a href="#" class="nav__link">Blogs</a></li>
-        <li><a href="./contact.html" class="nav__link">Contact</a></li>
-        <li>
-          <a href="#" class="nav__link"
-            ><img
-              src="./images/icons/light.svg"
-              class="img-fluid mode__icon"
-              alt="Modes"
-          /></a>
-        </li>
-      </ul>
-      <div class="burger">
-        <div class="line-1"></div>
-        <div class="line-2"></div>
-        <div class="line-3"></div>
-      </div>
-    </nav>
 
-    <div class="Separator"><br /><br /><br /><br /></div>
+
+  <!--  <div class="Separator"><br /><br /><br /><br /></div>
 
     <div class="Separator__2">
       <br /><br />
       <br /><br />
-    </div>
-    <h1>MY GALLERY</h1>
-
-  <!--  <div id="gallery" class="container-fluid">
-      <img src="./images/IMG-20180504-WA0008-1.jpg" class="img-responsive" />
-      <img src="./images/IMG_1737.JPG" class="img-responsive" />
-      <img
-        src="./images/Certificates/Super Student - 2020 - Certificate-007.jpg"
-        class="img-responsive"
-      />
-      <img src="./images/IMG_20200517_085510.jpg" class="img-responsive" />
-      <img src="./images/IMG_20200529_225552_851.jpg" class="img-responsive" />
-      <img src="./images/IMG_1822.JPG" class="img-responsive" />
-      <img src="./images/IMG_7279.JPG" class="card img-responsive" />
-      <img src="./images/IMG_20210512_234009_109.jpg" class="img-responsive" />
-      <img
-        src="./images/Certificates/SamarthGoyal-page-001.jpg"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1623705868049-415863305add?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1581014023865-4209099f2b71?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1504298032419-2e78164cf76e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1505015353489-1759d3cc24e2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1621468444006-a2a0117b7c0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1622890276840-8eabe803e2bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1471931452361-f5ff1faa15ad?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1515863149848-223cbed59017?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1443632864897-14973fa006cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1535224206242-487f7090b5bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1620055374842-145f66ec4652?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-        class="img-responsive"
-      />
-      <img
-        src="https://images.unsplash.com/photo-1516905365385-7f89706faaf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
-        class="img-responsive"
-      />
-    </div>
-
-    <div id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <!--Modal content-->
-        <!--<div class="modal-content">
-          <div class="modal-body"></div>
-        </div>
-      </div>
-    </div>
-
-    <div id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-        <!-- Modal content-->
-        <!--<div class="modal-content">
-          <div class="modal-body"></div>
-        </div>
-      </div>
     </div>-->
+    <h1>MY GALLERY</h1>
+    <div class="row">
+      <div class="col-lg-3">
 
-    <div id="gallery" class="container-fluid">
-      <img src="https://source.unsplash.com/1600x1200?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/1024x768?female,portrait" class="img-responsive">
-       <img src="https://source.unsplash.com/1366x768?female,portrait" class="img-responsive">
-      <video class="vid" controls>
-        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-        </source>
-      </video>
-      <img src="https://source.unsplash.com/1920x1080?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/640x360?female,portrait" class="img-responsive">
-    <img src="https://source.unsplash.com/320x640?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/1200x1600?female,portrait" class="card img-responsive">
-      <img src="https://source.unsplash.com/800x600?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/600x800?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/400x600?female,portrait" class="img-responsive">
-      <img src="https://source.unsplash.com/600x400?female,portrait" class="img-responsive">
-    <img src="https://source.unsplash.com/1100x1600?female,portrait" class="img-responsive">
-    <img src="https://source.unsplash.com/1600x1100?female,portrait" class="img-responsive">
-    <img src="https://source.unsplash.com/992x768?female,portrait" class="img-responsive">
-    <img src="https://source.unsplash.com/768x992?female,portrait" class="img-responsive">
-
+<div id="menu" class="menu">
+  <div class="actionsBar">
+    <div>
+      <button id="menuBtn" type="button">
+        <i class="fas fa-bars"></i>
+      </button>
+      <h3 class="menuText">Dashboard</h3>
     </div>
+  </div>
+  <ul class="optionsBar">
+    <li class="menuItem">
+      <a href="./index.html" class="menuOption">
+        <img src="./images/Logo.png" class="img-fluid" alt="Logo">
+        <h5 class="menuText">Home</h5>
+      </a>
+    </li>
+
+    <li class="menuItem">
+      <a href="#about" id="productManagerBtn" class="menuOption">
+        <i class="fas fa-info"></i>
+        <h5 class="menuText">About</h5>
+      </a>
+    </li>
+    <li class="menuItem">
+      <a href="#" id="constantManagerBtn" class="menuOption">
+        <i class="fas fa-border-all"></i>
+        <h5 class="menuText">Projects</h5>
+      </a>
+    </li>
+    <li class="menuItem">
+      <a
+        href="./certificates/cr-main.html"
+        id="constantManagerBtn"
+        class="menuOption"
+      >
+        <i class="fas fa-certificate"></i>
+        <h5 class="menuText">Certificate</h5>
+      </a>
+    </li>
+    <li class="menuItem">
+      <a href="./gallery.html" id="constantManagerBtn" class="menuOption">
+      <i class="fas fa-images"></i>
+        <h5 class="menuText">Gallery</h5>
+      </a>
+    </li>
+
+    <li class="menuItem">
+      <a href="./music.html" id="constantManagerBtn" class="menuOption">
+        <i class="fas fa-play"></i>
+        <h5 class="menuText">Music</h5>
+      </a>
+    </li>
+    <li class="menuItem">
+      <a href="#" id="constantManagerBtn" class="menuOption">
+        <i class="fas fa-blog"></i>
+        <h5 class="menuText">Blogs</h5>
+      </a>
+    </li>
+    <li class="menuItem">
+      <a href="./contact.html" id="constantManagerBtn" class="menuOption">
+        <i class="fas fa-phone"></i>
+        <h5 class="menuText">Contact</h5>
+      </a>
+    </li>
+  </ul>
 
 
-          <div class="modal-body">
+  <div class="themeBar">
+    <div>
+      <button class="btn-toggle button" type="button" id="dark-mode-toggle">
+        <i class="fas fa-moon" id="fa-moon"></i>
+        <i class="fas fa-sun sun1" id="img-fluid"></i>
+      </button>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col-lg-9">
 
-          </div>
-      
+<div id="gallery" class="container-fluid">
+
+  <!-- Menu Bar Creation -->
+
+  <img src="./images/IMG-20180504-WA0008-1.jpg" class="img-responsive" />
+        <img src="./images/IMG_1737.JPG" class="img-responsive" />
+        <img
+          src="./images/Certificates/Super Student - 2020 - Certificate-007.jpg"
+          class="img-responsive"
+        />
+        <img src="./images/IMG_20200517_085510.jpg" class="img-responsive" />
+        <img src="./images/IMG_20200529_225552_851.jpg" class="img-responsive" />
+        <img src="./images/IMG_1822.JPG" class="img-responsive" />
+        <img src="./images/IMG_7279.JPG" class="card img-responsive" />
+        <img src="./images/IMG_20210512_234009_109.jpg" class="img-responsive" />
+        <img
+          src="./images/Certificates/SamarthGoyal-page-001.jpg"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1623705868049-415863305add?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1581014023865-4209099f2b71?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1504298032419-2e78164cf76e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1505015353489-1759d3cc24e2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1621468444006-a2a0117b7c0a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=676&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1622890276840-8eabe803e2bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1471931452361-f5ff1faa15ad?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1515863149848-223cbed59017?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1443632864897-14973fa006cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1535224206242-487f7090b5bb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1620055374842-145f66ec4652?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1516905365385-7f89706faaf8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+          class="img-responsive"
+        />
+</div>
+
+
+
+
+    <!-- Modal content-->
+
+      <div class="modal-body">
+
+
+</div>
+</div>
+
+  </div>
+
+
+
     <!-- Footer Design -->
     <footer>
       <p style="color: black">
@@ -211,6 +233,7 @@
 
     <script src="./js/Nav.js"></script>
     <script src="./js/gallery.js"></script>
+      <script src="./js/sidebar.js"></script>
 
     <!-- Loading Scripts   -->
     <!-- Jquery Script -->
